--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools", "setuptools-scm"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "src"
+name = "mushroom_classification"
 version = "0.0.1"
 description = "image classfication for 9 mushrooms"
 authors = [
@@ -15,7 +15,7 @@ requires-python = ">=3.11"
 dynamic = ["dependencies", "optional-dependencies"]
 
 [tool.setuptools]
-packages = ["src"]
+packages = ["mushroom_classification"]
 
 [tool.setuptools.dynamic]
 dependencies = {file = ["requirements.txt"]}
