--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,4 +28,4 @@ jobs:
         pip install -r requirements_test.txt
     - name: Test with pytest
       run: |
-        pytest -v
+        pytest tests/
